--- a/roles/radiusdesk/tasks/Nginx_Debian.yml
+++ b/roles/radiusdesk/tasks/Nginx_Debian.yml
@@ -25,7 +25,13 @@
     state=installed
     update_cache=yes
   with_items: "{{ rd_php5_pkgs }}"
-  when: "ansible_distribution_version < '16'"
+  when: "ansible_distribution_version < '13'"
+
+- name: Adding Adre PHP7 PPA (Ubuntu 14+)
+  apt_repository:
+    repo="{{ php7_apt_ppa_repo }}"
+    state=present
+  when: "ansible_distribution_version == '14'"
 
 - name: Installing PHP7 packages (Ubuntu 14+)
   apt:
@@ -33,7 +39,7 @@
     state=installed
     update_cache=yes
   with_items: "{{ rd_php7_pkgs }}"
-  when: "ansible_distribution_version == '16'"
+  when: "ansible_distribution_version <= '16'"
 
 - name: Installing PHP7.1 packages (Ubuntu 14+)
   apt:
@@ -53,7 +59,7 @@
   notify:
     - Start Nginx
     - Start PHP-FPM
-  when: "ansible_distribution_version < '16'"
+  when: "ansible_distribution_version < '13'"
 
 - name: Installing RadiusDesk packages (Ubuntu 16)
   apt:
@@ -64,7 +70,7 @@
   notify:
     - Start Nginx
     - Start PHP7-FPM
-  when: "ansible_distribution_version == '16'"
+  when: "ansible_distribution_version <= '16'"
 
 - name: Installing RadiusDesk packages (Ubuntu 17+)
   apt:
@@ -81,13 +87,13 @@
   template:
     src="nginx/php_fpm.www.conf.j2"
     dest={{ php_fpm_config }}
-  when: "ansible_distribution_version < '16'"
+  when: "ansible_distribution_version < '13'"
 
 - name: Configuring PHP7-FPM to use UNIX sockets (Ubuntu 14+)
   template:
     src="nginx/php_fpm.www.conf.j2"
     dest={{ php7_fpm_config }}
-  when: "ansible_distribution_version == '16'"
+  when: "ansible_distribution_version <= '16'"
 
 - name: Configuring PHP7.1-FPM to use UNIX sockets (Ubuntu 14+)
   template:
@@ -112,7 +118,7 @@
   with_items:
     - "{{ nginx_pkg_name }}"
     - "{{ php_fpm_service_name }}"
-  when: "ansible_distribution_version < '16'"
+  when: "ansible_distribution_version < '13'"
 
 - name: Restarting RadiusDesk services for PHP7 (Ubuntu 14+)
   service:
@@ -121,7 +127,7 @@
   with_items:
     - "{{ nginx_pkg_name }}"
     - "{{ php7_fpm_service_name }}"
-  when: "ansible_distribution_version == '16'"
+  when: "ansible_distribution_version <= '16'"
 
 - name: Restarting RadiusDesk services for PHP7.1 (Ubuntu 14+)
   service:
@@ -206,14 +212,14 @@
     dest="{{ php_config_file }}"
     line='date.timezone = {{ php_timezone }}'
     regexp='^;date.timezone'
-  when: "ansible_distribution_version < '16'"
+  when: "ansible_distribution_version < '13'"
 
 - name: Fix PHP7 Default Timezone
   lineinfile: 
     dest="{{ php7_config_file }}"
     line='date.timezone = {{ php_timezone }}'
     regexp='^;date.timezone'
-  when: "ansible_distribution_version == '16'"
+  when: "ansible_distribution_version <= '16'"
 
 - name: Fix PHP7.1 Default Timezone
   lineinfile: 
@@ -231,13 +237,13 @@
   service:
     name={{ php_fpm_service_name }}
     state=started
-  when: "ansible_distribution_version < '16'"
+  when: "ansible_distribution_version < '13'"
 
 - name: Ensuring PHP7-FPM is Started (Ubuntu 14+)
   service:
     name={{ php7_fpm_service_name }}
     state=started
-  when: "ansible_distribution_version == '16'"
+  when: "ansible_distribution_version <= '16'"
 
 - name: Ensuring PHP71-FPM is Started (Ubuntu 14+)
   service:
