--- a/roles/radiusdesk/vars/Debian.yml
+++ b/roles/radiusdesk/vars/Debian.yml
@@ -26,6 +26,20 @@ rd_php5_pkgs:
  - mysql-client-5.6
  - mysql-client-core-5.6
 
+# RadiusDesk PHP7 Packages (Ubuntu 14)
+rd_php7_trusty_pkgs:
+ - php7.0-fpm
+ - php7.0-mysql
+ - php7.0-cli
+ - php7.0-gd
+ - php7.0-curl
+ - php7.0-intl
+ - php7.0-xml
+ - php7.0-mbstring
+ - mysql-server-5.6
+ - mysql-client-5.6
+ - mysql-client-core-5.6
+ 
 # RadiusDesk PHP7 Packages (Ubuntu 14+)
 rd_php7_pkgs:
  - php7.0-fpm
