--- a/roles/radiusdesk/vars/Debian.yml
+++ b/roles/radiusdesk/vars/Debian.yml
@@ -145,6 +145,7 @@ allow_vulnerable_openssl: yes
 rd_db_user: rd
 rd_db_password: rd
 rd_db_name: rd
+rd_db_host: localhost
 
 # MySQL (Ubuntu 14+)
 mysql_old_root_password: ""
@@ -209,3 +210,12 @@ node_apt_repo_key: "https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
 # PHP7 Repository for Ubuntu 14
 php7_apt_ppa_repo: "ppa:ondrej/php"
 
+# AWS RDS
+enable_aws_rds_support: no
+aws_rds_user: "root"
+aws_rds_password: "rdpassword"
+aws_rds_host: "rd-example.rds.amazonaws.com"
+aws_rds_port: 3306
+aws_rds_db_hosts:
+ - 127.0.0.1
+ - "%"
