--- a/roles/radiusdesk/tasks/Freeradius_RedHat.yml
+++ b/roles/radiusdesk/tasks/Freeradius_RedHat.yml
@@ -80,7 +80,7 @@
     mode=0777
     src="radius/radscenario.pl.j2"
 
-- name: Updating RadiusDesk paths for Freeradius (RHEL/CentOS 6+)
+- name: Updating RadiusDesk Cake 2 paths for Freeradius (RHEL/CentOS 6+)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/RadiusDesk.php"
     group={{ web_group }}
@@ -88,7 +88,7 @@
     src=RadiusDesk.php.j2
     validate='php -l %s'
 
-- name: Updating MESHDesk paths for Freeradius (RHEL/CentOS 6+)
+- name: Updating MESHDesk Cake 2 paths for Freeradius (RHEL/CentOS 6+)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/MESHdesk.php"
     group={{ web_group }}
@@ -96,9 +96,33 @@
     src=MESHdesk.php.j2
     validate='php -l %s'
 
-- name: Updating APProfiles paths for Freeradius (RHEL/CentOS 6+)
+- name: Updating APProfiles Cake 2 paths for Freeradius (RHEL/CentOS 6+)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/ApProfiles.php"
+    group={{ web_group }}
+    owner={{ web_user }}
+    src=ApProfiles.php.j2
+    validate='php -l %s'
+
+- name: Updating RadiusDesk Cake 3 paths for Freeradius (RHEL/CentOS 6+)
+  template:
+    dest="{{ nginx_webroot }}/cake3/rd_cake/config/RadiusDesk.php"
+    group={{ web_group }}
+    owner={{ web_user }}
+    src=RadiusDesk.php.j2
+    validate='php -l %s'
+
+- name: Updating MESHDesk Cake 3 paths for Freeradius (RHEL/CentOS 6+)
+  template:
+    dest="{{ nginx_webroot }}/cake3/rd_cake/config/MESHdesk.php"
+    group={{ web_group }}
+    owner={{ web_user }}
+    src=MESHdesk.php.j2
+    validate='php -l %s'
+
+- name: Updating APProfiles Cake 3 paths for Freeradius (RHEL/CentOS 6+)
+  template:
+    dest="{{ nginx_webroot }}/cake3/rd_cake/config/ApProfiles.php"
     group={{ web_group }}
     owner={{ web_user }}
     src=ApProfiles.php.j2
