Fix AWS RDS Support conditional check - Ubuntu

--- a/roles/radiusdesk/vars/Debian.yml
+++ b/roles/radiusdesk/vars/Debian.yml
@@ -181,7 +181,7 @@ pptpd_local_ip_network: "10.20.30"
 pptpd_client_dir: "/etc/ppp"
 
 # CoovaChilli
-enable_coovachilli_support: "no"
+enable_coovachilli_support: false
 coovachilli_service_name: chilli
 coovachilli_conf_dir: "/etc/chilli"
 coovachilli_default_conf: "/etc/default/chilli"
@@ -211,7 +211,7 @@ node_apt_repo_key: "https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
 php7_apt_ppa_repo: "ppa:ondrej/php"
 
 # AWS RDS
-enable_aws_rds_support: "no"
+enable_aws_rds_support: false
 aws_rds_user: "root"
 aws_rds_password: "rdpassword"
 aws_rds_host: "rd-example.rds.amazonaws.com"
