--- a/roles/radiusdesk/tasks/main.yml
+++ b/roles/radiusdesk/tasks/main.yml
@@ -59,7 +59,5 @@
 
 - meta: flush_handlers
 
-- debug:
-  msg: "Admin Portal => http://{{ ansible_default_ipv4.address }}/rd"
-- debug:
-  msg: "Username: root Password: admin"
+- debug: msg="Admin Portal => http://{{ ansible_default_ipv4.address }}/rd"
+- debug: msg='Username = root, Password = admin'
