Fix Conditional Check for AWS RDS Support

--- a/roles/radiusdesk/tasks/Nginx_Debian.yml
+++ b/roles/radiusdesk/tasks/Nginx_Debian.yml
@@ -314,7 +314,7 @@
     login_password={{ aws_rds_password }}
     login_host={{ aws_rds_host }}
     login_port={{ aws_rds_port }}
-  when: enable_aws_rds_support == "yes"
+  when: enable_aws_rds_support
 
 - name: Creating RadiusDesk Database (Ubuntu 14+)
   mysql_db:
@@ -346,15 +346,15 @@
     login_port={{ aws_rds_port }}
     host={{ item }}"
   with_items: "{{ aws_rds_db_hosts }}"
-  when: enable_aws_rds_support == "yes"
+  when: enable_aws_rds_support
 
 - name: Copying RADIUSDesk Database SQL File for AWS RDS (Ubuntu 14+)
   shell: cp -a {{ nginx_webroot }}/cake3/rd_cake/setup/db/rd.sql {{ temp_src_dir | quote }}/rd_aws.sql
-  when: enable_aws_rds_support == "yes"
+  when: enable_aws_rds_support
 
 - name: Updating RADIUSDesk Database for AWS RDS (Ubuntu 14+)
   shell: sed -i.bk "s/DEFINER=\`root\`@\`localhost\`/DEFINER=CURRENT_USER /g" {{ temp_src_dir | quote }}/rd_aws.sql
-  when: enable_aws_rds_support == "yes"
+  when: enable_aws_rds_support
 
 - name: Importing RadiusDesk Database (Ubuntu 14+)
   mysql_db:
@@ -373,7 +373,7 @@
     login_password={{ rd_db_password }}
     login_host={{ aws_rds_host }}
     login_port={{ aws_rds_port }}
-  when: enable_aws_rds_support == "yes"
+  when: enable_aws_rds_support
 
 - name: Updating RADIUSDesk Cake 2 Database Credentials (Ubuntu 14+)
   template:
