--- a/roles/radiusdesk/vars/RedHat.yml
+++ b/roles/radiusdesk/vars/RedHat.yml
@@ -76,7 +76,7 @@ rd_cake_svn_repo: "svn://dvdwalt@svn.code.sf.net/p/radiusdesk/code/trunk/rd_cake
 rd_cake3_svn_repo: "svn://dvdwalt@svn.code.sf.net/p/radiusdesk/code/trunk/cake3"
 rd_login_svn_repo: "svn://dvdwalt@svn.code.sf.net/p/radiusdesk/code/trunk/login"
 extjs_src_url: "https://sourceforge.net/p/radiusdesk/code/HEAD/tree/extjs/ext-6-sencha_cmd.tar.gz?format=raw"
-extjs_62_src_url: "http://svn.code.sf.net/p/radiusdesk/code/extjs/ext-6-2-sencha_cmd.tar.gz"
+extjs_62_src_url: "https://sourceforge.net/p/radiusdesk/code/HEAD/tree/extjs/ext-6-2-sencha_cmd.tar.gz?format=raw"
 extjs_src_md5_sum: "e829741694be90a27d7f0c6a24dbfc8b"
 extjs_62_src_md5_sum: "012c607cfb30b0e83da385d02d69c99c"
 rd_svn_revision: 2244
