--- a/roles/radiusdesk/tasks/Freeradius_RedHat.yml
+++ b/roles/radiusdesk/tasks/Freeradius_RedHat.yml
@@ -85,7 +85,7 @@
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/RadiusDesk.php"
     group={{ web_group }}
     owner={{ web_user }}
-    src=RadiusDesk.php.j2
+    src=rd/c2/RadiusDesk.php.j2
     validate='php -l %s'
 
 - name: Updating MESHDesk Cake 2 paths for Freeradius (RHEL/CentOS 6+)
@@ -93,7 +93,7 @@
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/MESHdesk.php"
     group={{ web_group }}
     owner={{ web_user }}
-    src=MESHdesk.php.j2
+    src=rd/c2/MESHdesk.php.j2
     validate='php -l %s'
 
 - name: Updating APProfiles Cake 2 paths for Freeradius (RHEL/CentOS 6+)
@@ -101,7 +101,7 @@
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/ApProfiles.php"
     group={{ web_group }}
     owner={{ web_user }}
-    src=ApProfiles.php.j2
+    src=rd/c2/ApProfiles.php.j2
     validate='php -l %s'
 
 - name: Updating RadiusDesk Cake 3 paths for Freeradius (RHEL/CentOS 6+)
@@ -109,7 +109,7 @@
     dest="{{ nginx_webroot }}/cake3/rd_cake/config/RadiusDesk.php"
     group={{ web_group }}
     owner={{ web_user }}
-    src=RadiusDesk.php.j2
+    src=rd/c3/RadiusDesk.php.j2
     validate='php -l %s'
 
 - name: Updating MESHDesk Cake 3 paths for Freeradius (RHEL/CentOS 6+)
@@ -117,7 +117,7 @@
     dest="{{ nginx_webroot }}/cake3/rd_cake/config/MESHdesk.php"
     group={{ web_group }}
     owner={{ web_user }}
-    src=MESHdesk.php.j2
+    src=rd/c3/MESHdesk.php.j2
     validate='php -l %s'
 
 - name: Updating APProfiles Cake 3 paths for Freeradius (RHEL/CentOS 6+)
@@ -125,7 +125,7 @@
     dest="{{ nginx_webroot }}/cake3/rd_cake/config/ApProfiles.php"
     group={{ web_group }}
     owner={{ web_user }}
-    src=ApProfiles.php.j2
+    src=rd/c3/ApProfiles.php.j2
     validate='php -l %s'
 
 - name: Configuring radmin_wrapper.pl Script for RadiusDesk (RHEL/CentOS 6+)
