--- a/roles/radiusdesk/tasks/Coovachilli_RedHat.yml
+++ b/roles/radiusdesk/tasks/Coovachilli_RedHat.yml
@@ -55,7 +55,7 @@
     dest="{{ nginx_webroot }}/rd_login/services/uam.php"
     owner={{ web_user }}
     group={{ web_group }}
-    src="uam.php.j2"
+    src="rd/uam.php.j2"
 
 - name: Configuring CoovaChilli Start-Up IPTables rules (RHEL/CentOS 6+)
   template:
